# IQ-Modulation-Convnet

./: pyproject.toml
src/convnet_iq/: main.ipynb  main.py
src/convnet_iq/iq_generation/: IQDataset.py  IQGenerator.py  channel.py  maps.py
